[gd_scene load_steps=19 format=3 uid="uid://ca0aoi1ky2mma"]

[ext_resource type="AudioStream" uid="uid://dltg1wdtq6gft" path="res://Music - Sound Effects/Background Music.mp3" id="1_wbwhq"]
[ext_resource type="Script" path="res://SettingsScene.gd" id="2_2by2v"]
[ext_resource type="Texture2D" uid="uid://big1sp5ljiyd5" path="res://Background assets/Login Walpper.png" id="2_u8g30"]
[ext_resource type="Texture2D" uid="uid://bve5alx55pff1" path="res://Background assets/Logo___8___1_-removebg-preview.png" id="3_dinxm"]
[ext_resource type="Texture2D" uid="uid://bkl502qro73an" path="res://Background assets/UI Sound.png" id="5_cc4r7"]
[ext_resource type="Texture2D" uid="uid://e462fbajsgjr" path="res://Background assets/UI back.png" id="6_aiyky"]
[ext_resource type="FontFile" uid="uid://cnjw4ot4bign3" path="res://Background assets/grapesoda_2/GrapeSoda.ttf" id="7_cq7uq"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_8ubjr"]
texture = ExtResource("2_u8g30")

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_x5iff"]
bg_color = Color(0, 0, 0, 0.815686)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_r4mdx"]
texture = ExtResource("3_dinxm")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_fdkfj"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_3caa6"]
texture = ExtResource("5_cc4r7")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_beh5x"]
texture = ExtResource("6_aiyky")

[sub_resource type="FontVariation" id="FontVariation_ihi14"]
base_font = ExtResource("7_cq7uq")

[sub_resource type="Animation" id="Animation_1wdo6"]
length = 0.001

[sub_resource type="Animation" id="Animation_074mo"]
resource_name = "close_settings"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Control/Panel:size")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.433333),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(1457, 1080), Vector2(0, 1080)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Control/ProgQuest Logo:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.1, 0.133333, 0.166667, 0.2),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Vector2(400, -28), Vector2(279.595, -28), Vector2(161.165, -28), Vector2(29.285, -28)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Control/ProgQuest Logo:size")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0.233333, 0.266667, 0.3, 0.333333),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Vector2(619, 594), Vector2(476, 594), Vector2(359, 594), Vector2(235, 594)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Control/ProgQuest Logo:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Control/MuteOrUnMute:position")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0, 0.0333333, 0.0666667, 0.1, 0.133333, 0.166667, 0.2, 0.233333, 0.266667, 0.3, 0.333333, 0.366667),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 0,
"values": [Vector2(1287.89, 924), Vector2(1179.93, 924), Vector2(1061.65, 924), Vector2(949.555, 924), Vector2(833.32, 924), Vector2(713.86, 924), Vector2(614.355, 924), Vector2(500.805, 924), Vector2(385.045, 924), Vector2(280.32, 924), Vector2(164.43, 924), Vector2(39.605, 924)]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("Control/MuteOrUnMute:visible")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("Control/VBoxContainer:size")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0, 0.0333333, 0.0666667, 0.1, 0.133333, 0.166667, 0.2, 0.233333, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 0,
"values": [Vector2(1308, 661), Vector2(1218.19, 661), Vector2(1125.41, 661), Vector2(1013.54, 661), Vector2(901.275, 661), Vector2(803.17, 661), Vector2(687.215, 661), Vector2(597.045, 661), Vector2(380, 661)]
}
tracks/7/type = "value"
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/path = NodePath("Control/VBoxContainer:visible")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}
tracks/8/type = "value"
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/path = NodePath("Control/Back Button:visible")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}

[sub_resource type="Animation" id="Animation_b18py"]
resource_name = "open_settings"
length = 0.55
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Control/Panel:size")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0, 1080), Vector2(1457, 1080)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Control/VBoxContainer:size")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.166667, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(405, 661), Vector2(1308, 661)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Control/MuteOrUnMute:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0.166667, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(313.63, 924), Vector2(1287.89, 924)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Control/ProgQuest Logo:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0.2, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(-17.09, -28), Vector2(400, -28)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Control/VBoxContainer:visible")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0, 0.166667, 0.5),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [false, true, true]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("Control/ProgQuest Logo:visible")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0, 0.2, 0.5),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [false, true, true]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("Control/MuteOrUnMute:visible")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0, 0.166667, 0.5),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [false, true, true]
}
tracks/7/type = "value"
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/path = NodePath("Control/Back Button:visible")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/keys = {
"times": PackedFloat32Array(0, 0.166667),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}
tracks/8/type = "value"
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/path = NodePath("Control/ProgQuest Logo:size")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/keys = {
"times": PackedFloat32Array(0.2),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(618.999, 594)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_72y20"]
_data = {
"RESET": SubResource("Animation_1wdo6"),
"close_settings": SubResource("Animation_074mo"),
"open_settings": SubResource("Animation_b18py")
}

[node name="AudioStreamPlayer" type="AudioStreamPlayer"]
process_mode = 3
stream = ExtResource("1_wbwhq")

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("2_2by2v")

[node name="Background Photo" type="Panel" parent="Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxTexture_8ubjr")

[node name="Panel" type="Panel" parent="Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = -979.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_x5iff")

[node name="ProgQuest Logo" type="Panel" parent="Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 400.0
offset_top = -28.0
offset_right = -1417.0
offset_bottom = -514.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxTexture_r4mdx")

[node name="MuteOrUnMute" type="Button" parent="Control"]
layout_mode = 0
offset_left = 1287.89
offset_top = 924.0
offset_right = 1422.89
offset_bottom = 1038.0
theme_override_styles/focus = SubResource("StyleBoxTexture_fdkfj")
theme_override_styles/hover = SubResource("StyleBoxTexture_3caa6")
theme_override_styles/pressed = SubResource("StyleBoxTexture_3caa6")
theme_override_styles/normal = SubResource("StyleBoxTexture_3caa6")
toggle_mode = true

[node name="Back Button" type="Button" parent="Control"]
layout_mode = 0
offset_left = 38.0
offset_top = 928.0
offset_right = 173.0
offset_bottom = 1042.0
theme_override_styles/focus = SubResource("StyleBoxTexture_beh5x")
theme_override_styles/hover = SubResource("StyleBoxTexture_beh5x")
theme_override_styles/pressed = SubResource("StyleBoxTexture_beh5x")
theme_override_styles/normal = SubResource("StyleBoxTexture_beh5x")

[node name="VBoxContainer" type="VBoxContainer" parent="Control"]
layout_mode = 0
offset_left = 35.0
offset_top = 294.0
offset_right = 1343.0
offset_bottom = 955.0
theme_override_constants/separation = 20
alignment = 1

[node name="Master Volume" type="Label" parent="Control/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = SubResource("FontVariation_ihi14")
theme_override_font_sizes/font_size = 64
text = "Master Volume"

[node name="Master" type="HSlider" parent="Control/VBoxContainer"]
layout_mode = 2
max_value = 1.0
step = 0.05
value = 1.0

[node name="Label2" type="Label" parent="Control/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = SubResource("FontVariation_ihi14")
theme_override_font_sizes/font_size = 64
text = "Sound SFX"

[node name="Sound SFX" type="HSlider" parent="Control/VBoxContainer"]
layout_mode = 2
max_value = 1.0
step = 0.05
value = 1.0

[node name="Music Volume" type="Label" parent="Control/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = SubResource("FontVariation_ihi14")
theme_override_font_sizes/font_size = 64
text = "Music Volume"

[node name="Music" type="HSlider" parent="Control/VBoxContainer"]
layout_mode = 2
max_value = 1.0
step = 0.05
value = 1.0

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_72y20")
}

[connection signal="pressed" from="Control/MuteOrUnMute" to="Control" method="_on_mute_or_un_mute_pressed"]
[connection signal="pressed" from="Control/Back Button" to="Control" method="_on_back_button_pressed"]
[connection signal="value_changed" from="Control/VBoxContainer/Master" to="Control" method="_on_master_value_changed"]
[connection signal="value_changed" from="Control/VBoxContainer/Sound SFX" to="Control" method="_on_sound_sfx_value_changed"]
[connection signal="value_changed" from="Control/VBoxContainer/Music" to="Control" method="_on_music_value_changed"]
